; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_play_module.c_ngx_rtmp_play_parse_index.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_play_module.c_ngx_rtmp_play_parse_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_rtmp_play_parse_index.name = internal global [8 x i8] c"xindex=\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8, i8*)* @ngx_rtmp_play_parse_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_rtmp_play_parse_index(i8 signext %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  store i8 %0, i8* %4, align 1
  store i8* %1, i8** %5, align 8
  %8 = load i8, i8* %4, align 1
  store i8 %8, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @ngx_rtmp_play_parse_index.name, i64 0, i64 0), align 1
  br label %9

9:                                                ; preds = %31, %2
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @ngx_strstr(i8* %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @ngx_rtmp_play_parse_index.name, i64 0, i64 0))
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %39

16:                                               ; preds = %9
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = icmp ne i8* %17, %18
  br i1 %19, label %20, label %35

20:                                               ; preds = %16
  %21 = load i8*, i8** %6, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 -1
  %23 = load i8, i8* %22, align 1
  store i8 %23, i8* %7, align 1
  %24 = load i8, i8* %7, align 1
  %25 = sext i8 %24 to i32
  %26 = icmp ne i32 %25, 63
  br i1 %26, label %27, label %34

27:                                               ; preds = %20
  %28 = load i8, i8* %7, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp ne i32 %29, 38
  br i1 %30, label %31, label %34

31:                                               ; preds = %27
  %32 = load i8*, i8** %6, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 1
  store i8* %33, i8** %5, align 8
  br label %9

34:                                               ; preds = %27, %20
  br label %35

35:                                               ; preds = %34, %16
  %36 = load i8*, i8** %6, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 7
  %38 = call i32 @atoi(i8* %37)
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %35, %15
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i64 @ngx_strstr(i8*, i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
